UI crashes fixed on footer, overflow style upgraded

--- a/responsive.css
+++ b/responsive.css
@@ -27,6 +27,11 @@
   header container span {
     display: block;
   }
+  middle-row{
+    display: flex;
+    flex-flow: column !important;
+    flex-wrap: wrap;
+  }
 }/*closing tag of @media*/
   
   /* middle-row{
